--- a/modules/administration/pages/troubleshooting/tshoot-highsynctimesoverwan.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-highsynctimesoverwan.adoc
@@ -23,7 +23,7 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 
 
 Depending on what changes are executed in the WebUI or via an API call to distribution or system settings, [literal]``cobbler sync`` command may be required to transfer files from {productname} Server to {productname} Proxy systems.
-To accomplish this, cobbler uses a list of proxies specified in [literal]``/etc/cobbler/settings``.
+To accomplish this, {cobbler} uses a list of proxies specified in [literal]``/etc/cobbler/settings``.
 
 Due to its design, [literal]``cobbler sync`` is not able to sync only the changed or recently added files.
 
@@ -98,15 +98,15 @@ tcpdump -i ethX -s 200 host <ip-address-of-susemanager> and not ssh
 * This will only capture a package size of 200 which is sufficient to run an analysis.
 * Adjust ethX to the respective network interface {productname} uses to communicate with the proxy.
 * At last, ssh communication will not be captured to reduce the number of packages even further.
-. Start a cobbler sync.
-* To force a sync, delete the cobbler json cache file first and then issue cobbler sync:
+. Start a {cobbler} sync.
+* To force a sync, delete the {cobbler} json cache file first and then issue {cobbler} sync:
 +
 ----
 rm /var/lib/cobbler/pxe_cache.json
 cobbler sync
 ----
 +
-. When cobbler is finished, stop the TCPdumps.
+. When {cobbler} is finished, stop the TCPdumps.
 . Open the TCPdumps using Wireshark, go to [guimenu]``Statistics > Conversations`` and wait for the dump to be analyzed.
 . Switch to the TCP tab.
   The number shown on this tab gives the total number of conversations captured between SUSE Manager and SUSE Manager Proxy.
