updated naming, and antora.yml

--- a/modules/pay-as-you-go/pages/payg-overview.adoc
+++ b/modules/pay-as-you-go/pages/payg-overview.adoc
@@ -1,6 +1,6 @@
 = Overview of Pay-as-you-go
 :description: SUSE Manager {payg} is a flexible and cost-effective solution that allows users to manage their systems with ease. Unlike traditional subscription models, {payg} does not require a long-term commitment. Users can leverage the images of SUSE Manager on a {payg} basis, paying only for the time of use and the number of systems managed.
-:keywords: Payg, Pay-as-you-go, AWS, Amazon Web Services, cost-effective
+:keywords: Payg, Pay-as-you-go, AWS, Amazon Web Services, cost-effective, scaling, cloud, SUSE Manager
 
 SUSE Manager {payg} is a flexible and cost-effective solution that allows users to manage their systems with ease. Unlike traditional subscription models, {payg} does not require a long-term commitment. Users can leverage the images of SUSE Manager on a {payg} basis, paying only for the time of use and the number of systems managed.
 
