--- a/modules/installation-and-upgrade/pages/uyuni-proxy-registration.adoc
+++ b/modules/installation-and-upgrade/pages/uyuni-proxy-registration.adoc
@@ -1,20 +1,12 @@
 [[proxy-register]]
-= Proxy Registration
+= {productname} Proxy Registration
 
-Proxy systems are registered as Salt clients using a bootstrap script.
+Proxy systems are registered as {salt} clients using a bootstrap script.
 
 This procedure describes software channel setup and registering the installed proxy as the {productname} client, using an activation key.
 
-[IMPORTANT]
-====
-Before you can select the correct child channels while creating the activation key, ensure you have properly synchronized the openSUSE Leap channel with all the needed child channels and the {productname} Proxy channel.
-====
-
-
-
 [[proxy-register-procedure]]
 .Procedure: Registering the Proxy
-
 . On the {productname} Server, create openSUSE Leap and the {productname} Proxy channels with the [command]``spacewalk-common-channels`` command.
     [command]``spacewalk-common-channels`` is part of the [package]``spacewalk-utils`` package:
 +
@@ -31,20 +23,17 @@ uyuni-proxy-stable-leap-154
 +
 Instead of [systemitem]``uyuni-proxy-stable-leap-154`` you can also try [systemitem]``uyuni-proxy-devel-leap`` that is the current development version.
 +
-For more information, see xref:client-configuration:clients-opensuseleap.adoc[].
+[IMPORTANT]
+====
+Before you can select the correct child channels while creating the activation key, ensure you have properly synchronized the openSUSE Leap channel with all the needed child channels and the {productname} Proxy channel.
+====
 +
-////
-// Atfer a successful sync run, bootstrap repos are now created automatically.
-// Since 2020.07 or earlier
-. Create the openSUSE Leap Uyuni Client Tools Repository for bootstrapping.
-For more information about bootstrapping, see xref:client-configuration:bootstrap-repository.adoc[].
-////
 . Create an activation key with openSUSE Leap as a base channel and the other channels as child channels.
     For more information about activation keys, see xref:client-configuration:activation-keys.adoc[].
-. Modify a bootstrap script for the proxy.
+. Create a bootstrap script for the proxy, and adjust it.
     Add the GPG key to the [systemitem]``ORG_GPG_KEY=`` parameter.
-    For more information, see xref:client-configuration:clients-opensuseleap.adoc[].
-    For more information about bootstrap scripts, see xref:client-configuration:registration-bootstrap.adoc[].
+//    //For more information, see xref:client-configuration:clients-opensuseleap.adoc[].
+//    //For more information about bootstrap scripts, see xref:client-configuration:registration-bootstrap.adoc[].
 +
 // Traditional clients are not supported
 . Bootstrap the client using the script.
