Backport43 - Refactoring the Proxy registration file.

--- a/modules/installation-and-upgrade/pages/proxy-registration.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-registration.adoc
@@ -17,13 +17,6 @@ After the Salt client is succesfully bootstrapped, it needs to be configured as 
 This procedure describes software channel setup and registering the installed proxy as the {productname} client, using an activation key.
 
 
-//[IMPORTANT]
-//====
-//When choosing a username or password for your {productname} Proxy, ensure it does not contain an ``@`` or ``:`` character.
-//These characters are reserved.
-//====
-
-
 [IMPORTANT]
 ====
 Before you can select the correct child channels while creating the activation key, ensure you have completely downloaded the {productname} Proxy {productnumber} channel and all the recommended and mandatory {sle} {sles-version} {sp-version} channels.
@@ -49,7 +42,11 @@ image::proxy-key.png[]
 +
 The [systemitem]``SLE-Product-SUSE-Manager-Proxy-4.3-Updates`` channel is mandatory.
 +
-
+[IMPORTANT]
+====
+Before you can select the correct child channels while creating the activation key, ensure you have completely downloaded the {productname} Proxy {productnumber} channel and all the recommended and mandatory {sle} {sles-version} {sp-version} channels.
+====
++
 .Base and Child Proxy Channel
 image::proxy-child.png[]
 +
