--- a/modules/client-configuration/pages/clients-opensuseleap.adoc
+++ b/modules/client-configuration/pages/clients-opensuseleap.adoc
@@ -1,11 +1,11 @@
 [[clients-opensuseleap]]
-= Registering openSUSE Leap Clients
+= Registering {opensuse} Leap Clients
 
-This section contains information about registering Salt clients running openSUSE operating systems.
-{productname} supports openSUSE Leap 15 clients using Salt.
+This section contains information about registering {salt} clients running {opensuse} operating systems.
+{productname} supports {opensuse} Leap 15 clients using {salt}.
 Traditional clients are not supported.
 
-Bootstrapping is supported for starting openSUSE clients and performing initial state runs such as setting repositories and performing profile updates.
+Bootstrapping is supported for starting {opensuse} clients and performing initial state runs such as setting repositories and performing profile updates.
 
 
 
@@ -18,7 +18,6 @@ For full list of supported products and architectures, see xref:client-configura
 
 include::snippets/arch-other-note.adoc[]
 
-//The products you need for this procedure are:
 For example, when working with `x86_64` architecture, you need this product:
 
 ifeval::[{suma-content} == true]
@@ -31,20 +30,11 @@ ifeval::[{suma-content} == true]
 | OS Version
 | Product Name
 
-| {opensuse} Leap 15.1
-| openSUSE Leap 15.1 x86_64
-
-| {opensuse} Leap 15.2
-| openSUSE Leap 15.2 x86_64
-
-| {opensuse} Leap 15.3
-| openSUSE Leap 15.3 x86_64
+| {opensuse} Leap 15.5
+| {opensuse} Leap 15.5 x86_64
 
 | {opensuse} Leap 15.4
-| openSUSE Leap 15.4 x86_64
-
-| {opensuse} Leap 15.5
-| openSUSE Leap 15.5 x86_64
+| {opensuse} Leap 15.4 x86_64
 
 |===
 
@@ -59,11 +49,8 @@ The channels you need for this procedure are:
 |===
 
 | OS Version | Base Channel
-| {opensuse} Leap 15.1 | opensuse-leap-15.1-pool
-| {opensuse} Leap 15.2 | opensuse-leap-15.2-pool
-| {opensuse} Leap 15.3 | opensuse-leap-15.3-pool
-| {opensuse} Leap 15.4 | opensuse-leap-15.4-pool
 | {opensuse} Leap 15.5 | opensuse-leap-15.5-pool
+| {opensuse} Leap 15.4 | opensuse-leap-15.4-pool
 
 |===
 
@@ -74,33 +61,6 @@ endif::[]
 
 ifeval::[{uyuni-content} == true]
 [[opensuse-channels-cli]]
-[cols="1,1,1,1,1,1", options="header"]
-.{opensuse} Channels - CLI
-|===
-
-| OS Version
-| Base Channel
-| Client Channel
-| Updates Channel
-| Non-OSS Channel
-| Non-OSS Updates Channel
-
-| {opensuse} Leap 15.1
-| opensuse_leap15_1
-| opensuse_leap15_1-uyuni-client
-| opensuse_leap15_1-updates
-| opensuse_leap15_1-non-oss
-| opensuse_leap15_1-non-oss-updates
-
-| {opensuse} Leap 15.2
-| opensuse_leap15_2
-| opensuse_leap15_2-uyuni-client
-| opensuse_leap15_2-updates
-| opensuse_leap15_2-non-oss
-| opensuse_leap15_2-non-oss-updates
-
-|===
-
 [cols="1,1,1,1,1,1,1,1", options="header"]
 .{opensuse} Channels - CLI
 |===
@@ -114,14 +74,14 @@ ifeval::[{uyuni-content} == true]
 | Backports Updates Channel
 | SLE Updates Channel
 
-| {opensuse} Leap 15.3
-| opensuse_leap15_3
-| opensuse_leap15_3-uyuni-client
-| opensuse_leap15_3-updates
-| opensuse_leap15_3-non-oss
-| opensuse_leap15_3-non-oss-updates
-| opensuse_leap15_3-backports-updates
-| opensuse_leap15_3-sle-updates
+| {opensuse} Leap 15.5
+| opensuse_leap15_5
+| opensuse_leap15_5-uyuni-client
+| opensuse_leap15_5-updates
+| opensuse_leap15_5-non-oss
+| opensuse_leap15_5-non-oss-updates
+| opensuse_leap15_5-backports-updates
+| opensuse_leap15_5-sle-updates
 
 | {opensuse} Leap 15.4
 | opensuse_leap15_4
@@ -131,15 +91,6 @@ ifeval::[{uyuni-content} == true]
 | opensuse_leap15_4-non-oss-updates
 | opensuse_leap15_4-backports-updates
 | opensuse_leap15_4-sle-updates
-
-| {opensuse} Leap 15.5
-| opensuse_leap15_5
-| opensuse_leap15_5-uyuni-client
-| opensuse_leap15_5-updates
-| opensuse_leap15_5-non-oss
-| opensuse_leap15_5-non-oss-updates
-| opensuse_leap15_5-backports-updates
-| opensuse_leap15_5-sle-updates
 
 |===
 
