Fixed SUMA support matrix for AlmaLinux and Rocky Linux.

--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -85,7 +85,7 @@ ifeval::[{suma-content} == true]
 | {check}
 
 | {almalinux} 9
-| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
+| {x86_64}, {aarch64}
 | {check}
 
 | {amazon} 2
@@ -133,7 +133,7 @@ ifeval::[{suma-content} == true]
 | {check}
 
 | {rocky} 9
-| {x86_64}, {aarch64}, {ppc64le}, {s390x}
+| {x86_64}, {aarch64}
 | {check}
 
 | {ubuntu} 18.04
