--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -63,6 +63,10 @@ ifeval::[{suma-content} == true]
 | {x86_64}, {aarch64}
 | {check}
 
+| {almalinux} 9
+| {x86_64}, {aarch64}
+| {check}
+
 | {amazon} 2
 | {x86_64}, {aarch64}
 | {check}
@@ -104,6 +108,10 @@ ifeval::[{suma-content} == true]
 | {check}
 
 | {rocky} 8
+| {x86_64}, {aarch64}
+| {check}
+
+| {rocky} 9
 | {x86_64}, {aarch64}
 | {check}
 
@@ -181,7 +189,7 @@ ifeval::[{uyuni-content} == true]
 | {check}
 
 | {almalinux} 9
-| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
+| {x86_64}, {aarch64}
 | {check}
 
 | {amazon} 2
