--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -181,7 +181,7 @@ ifeval::[{uyuni-content} == true]
 | {check}
 
 | {almalinux} 9
-| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
+| {x86_64}, {aarch64}
 | {check}
 
 | {amazon} 2
@@ -221,7 +221,7 @@ ifeval::[{uyuni-content} == true]
 | {check}
 
 | {rhel} 9
-| {x86_64}
+| {x86_64}, {aarch64}
 | {check}
 
 | {rocky} 8
@@ -229,7 +229,7 @@ ifeval::[{uyuni-content} == true]
 | {check}
 
 | {rocky} 9
-| {x86_64}, {aarch64}, {ppc64le}, {s390x}
+| {x86_64}, {aarch64}
 | {check}
 
 | {ubuntu} 18.04
