--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -7,7 +7,22 @@ include::./branding/pdf/entities.adoc[]
 endif::[]
 
 
-* xref:specialized-guides-overview.adoc[Specialized Guides]
+* xref:payg/specialized-guides-overview.adoc[Specialized Guides]
+
+** xref:payg/payg-overview.adoc[Public Cloud Services Guide]
+*** xref:payg/payg-benefits.adoc[Benefits of PAYG]
+*** xref:payg/payg-and-aws.adoc[PAYG and AWS]
+**** xref:payg/payg-getting-started-with-aws.adoc[Getting started with AWS]
+**** xref:payag/payg-aws-requirements[AWS requirements] 
+**** xref:payg/creating-an-aws-account.adoc[Creating an AWS account]
+**** xref:payg/selecting-the-payg-plan.adoc[Selecting the PAYG plan]
+**** xref:payg/selecting-and-launching-instances.adoc[Selecting and launching services]
+
+*** xref:payg/payg-and-azure.adoc[PAYG and Azure]
+**** xref:payg/payg-getting-started-with-aws.adoc[Getting started with Azure]
+**** xref:payag/payg-aws-requirements[Azure requirements] 
+**** xref:payg/creating-an-aws-account.adoc[Creating an Azure account]
+
 ** xref:salt/salt-overview.adoc[Salt Guide]
 *** xref:salt/salt-terminology.adoc[Terminology]
 *** xref:salt/salt-command.adoc[Salt Command]
@@ -56,7 +71,6 @@ endif::[]
 *** xref:qs-sap/prepare-server.adoc[Prepare Server]
 *** xref:qs-sap/prepare-clients.adoc[Prepare Clients]
 *** xref:qs-sap/configure.adoc[Configuration]
-
 
 ifdef::backend-pdf[]
 include::modules/ROOT/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
