--- a/modules/specialized-guides/pages/payg/payg-benefits.adoc
+++ b/modules/specialized-guides/pages/payg/payg-benefits.adoc
@@ -1,4 +1,4 @@
-= Overview of benefits for using Pay-As-You-Go
+= Overview of benefits for using {payg}
 
 The SUSE Manager {payg} instance offers a flexible and responsive solution tailored to the modern business landscape. Key benefits include:
 
@@ -7,7 +7,7 @@ The SUSE Manager {payg} instance offers a flexible and responsive solution tailo
 * *Ease of Use:* Utilize SUSE Manager's powerful features on a {payg} basis, streamlining the initial setup and ongoing management.
 * *Scalability:* Effortlessly scale the number of systems managed according to your requirements, without worrying about subscription limitations.
 * *Rapid Deployment:* Quickly run the image of your choice and begin managing your systems, enhancing responsiveness to business needs.
-* *Integration with AWS:* Seamlessly leverage SUSE Manager {payg} on AWS, taking advantage of cloud infrastructure for an agile, efficient system management experience.
+* *Integration with Cloud Services:* Seamlessly leverage SUSE Manager {payg} on {aws}, Azure, or GCP taking advantage of cloud infrastructure for an agile, efficient system management experience.
 
 These benefits contribute to a more dynamic and cost-effective approach to managing systems, aligning with the ever-changing demands of today's business environment.
 
