--- a/modules/specialized-guides/pages/payg/payg-aws-requirements.adoc
+++ b/modules/specialized-guides/pages/payg/payg-aws-requirements.adoc
@@ -1,6 +1,6 @@
 = AWS System Requirements
 
-When setting up a SUSE Manager Pay-As-You-Go (PAYG) instance on AWS, it's essential to carefully consider the system requirements to ensure optimal performance and functionality. The requirements outlined below have been tailored to provide a smooth deployment and operation of the SUSE Manager PAYG instance.
+When setting up a SUSE Manager {payg} instance on AWS, it's essential to carefully consider the system requirements to ensure optimal performance and functionality. The requirements outlined below have been tailored to provide a smooth deployment and operation.
 
 .AWS System Requirements
 [cols="2,1"]
