--- a/modules/specialized-guides/pages/payg/payg-find-the-suma-aws-image.adoc
+++ b/modules/specialized-guides/pages/payg/payg-find-the-suma-aws-image.adoc
@@ -1,6 +1,6 @@
 = Finding the SUSE Manager {productversion} {payg} Image on AWS
 
-Follow these step-by-step instructions to locate the SUSE Manager {productversion} Pay-As-You-Go (PAYG) image on AWS:
+Follow these step-by-step instructions to locate the SUSE Manager {productversion} {payg} image on AWS:
 
 . Login to AWS Management Console
 * Navigate to link:https://aws.amazon.com/console/[AWS Management Console].
@@ -15,12 +15,12 @@ Follow these step-by-step instructions to locate the SUSE Manager {productversio
 * This will lead you to the “Choose an Amazon Machine Image (AMI)” page.
 * Click on the "AWS Marketplace" tab on the left.
 
-. Search for SUSE Manager 4.3 PAYG Image
-* In the search bar, type "SUSE Manager 4.3 Pay-As-You-Go" and press Enter.
+. Search for SUSE Manager {productversion} {payg} Image
+* In the search bar, type "SUSE Manager {productversion} {payg}" and press Enter.
 * You should now see a list of available AMIs related to your search.
 
 . Select the Image
-* Locate the correct SUSE Manager 4.3 PAYG image from the results.
+* Locate the correct SUSE Manager {productversion} {payg} image from the results.
 * Click on the "Select" button to the right of the image listing.
 
 . Review and Launch
@@ -38,7 +38,7 @@ Follow these step-by-step instructions to locate the SUSE Manager {productversio
 
 . Verify the Launch
 * You'll be redirected to the EC2 Dashboard.
-* Under “Instances” on the left sidebar, you should see your newly launched SUSE Manager 4.3 PAYG instance running.
+* Under “Instances” on the left sidebar, you should see your newly launched SUSE Manager {productversion} {payg} instance running.
 
 [NOTE] 
 .Usage and Costs
