about inventory - xref

--- a/modules/administration/pages/ansible-integration.adoc
+++ b/modules/administration/pages/ansible-integration.adoc
@@ -18,6 +18,7 @@ Supported features are:
 * discovery of playbooks
 * execution of playbooks
 
+The inventory is sorted list of managed Ansible nodes.  For more information, see inventories, see https://docs.ansible.com/ansible/latest/inventory_guide/index.html.
 
 
 [[at.ansible.requirements]]
