add playbooks info
fix links

--- a/modules/administration/pages/ansible-integration.adoc
+++ b/modules/administration/pages/ansible-integration.adoc
@@ -18,7 +18,9 @@ Supported features are:
 * discovery of playbooks
 * execution of playbooks
 
-The inventory is sorted list of managed Ansible nodes.  For more information, see inventories, see https://docs.ansible.com/ansible/latest/inventory_guide/index.html.
+* The inventory is sorted list of managed Ansible nodes.  For more information about organizing an inventory, see https://docs.ansible.com/ansible/latest/inventory_guide/intro_inventory.html.
+* Playbooks are a way to describe how the inventory is to be managed.  For more information about playbooks, see https://docs.ansible.com/ansible/latest/playbook_guide/playbooks_intro.html.
+
 
 
 [[at.ansible.requirements]]
