Fixed supported SLE Micro architectues.

--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -44,7 +44,7 @@ ifeval::[{suma-content} == true]
 | {check}
 
 | {micro}
-| {x86_64}, {ppc64le}, {aarch64}
+| {x86_64}, {aarch64}, {s390x}
 | {check}
 
 | {opensuse} Leap 15
@@ -158,7 +158,7 @@ ifeval::[{uyuni-content} == true]
 | {check}
 
 | {micro}
-| {x86_64}, {ppc64le}, {aarch64}
+| {x86_64}, {aarch64}, {s390x}
 | {check}
 
 | {opensuse} Leap 15
