backport43 - Fixed supported SLE Micro architectues.

--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -53,7 +53,7 @@ ifeval::[{suma-content} == true]
 | {check}
 
 | {micro}
-| {x86_64}, {ppc64le}, {aarch64}
+| {x86_64}, {aarch64}, {s390x}
 | {cross}
 | {check}
 
@@ -183,7 +183,7 @@ ifeval::[{uyuni-content} == true]
 | {check}
 
 | {micro}
-| {x86_64}, {ppc64le}, {aarch64}
+| {x86_64}, {aarch64}, {s390x}
 | {cross}
 | {check}
 
