--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -70,7 +70,7 @@ ifeval::[{suma-content} == true]
 | {check}
 
 | {micro}
-| {x86_64}, {ppc64le}, {aarch64}
+| {x86_64}, {aarch64}, {s390x}
 | {cross}
 | {check}
 
@@ -215,7 +215,7 @@ ifeval::[{uyuni-content} == true]
 | {check}
 
 | {micro}
-| {x86_64}, {ppc64le}, {aarch64}
+| {x86_64}, {aarch64}, {s390x}
 | {cross}
 | {check}
 
