Consistency fox. Changed ARM architecture to aarch64.

--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -45,11 +45,11 @@ ifeval::[{suma-content} == true]
 | Salt Clients
 
 | {sle} 12
-| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 
 | {sle} 15
-| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 
 | {sles} for SAP 12
@@ -163,11 +163,11 @@ ifeval::[{uyuni-content} == true]
 | Salt Clients
 
 | {sle} 12
-| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 
 | {sle} 15
-| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 
 | {sles} for SAP 12
