--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -28,11 +28,11 @@ ifeval::[{suma-content} == true]
 | Salt Clients
 
 | {sle} 12
-| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 
 | {sle} 15
-| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 
 | {sles} for SAP 12
@@ -142,11 +142,11 @@ ifeval::[{uyuni-content} == true]
 | Salt Clients
 
 | {sle} 12
-| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 
 | {sle} 15
-| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 
 | {sles} for SAP 12
