--- a/modules/snippets/pages/supported-client-systems-snippet.adoc
+++ b/modules/snippets/pages/supported-client-systems-snippet.adoc
@@ -11,12 +11,12 @@ ifeval::[{suma-content} == true]
 | Salt Clients
 
 | {sle} 15
-| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 | {check}
 
 | {sle} 12
-| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 | {check}
 
@@ -136,12 +136,12 @@ ifeval::[{uyuni-content} == true]
 | Salt Clients
 
 | {sle} 15
-| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 | {check}
 
 | {sle} 12
-| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 | {check}
 
