Backport43 - consistency fix. Changed ARM architecture to aarch64.

--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -50,12 +50,12 @@ ifeval::[{suma-content} == true]
 | Salt Clients
 
 | {sle} 15
-| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64} 
 | {check}
 | {check}
 
 | {sle} 12
-| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 | {check}
 
@@ -195,12 +195,12 @@ ifeval::[{uyuni-content} == true]
 | Salt Clients
 
 | {sle} 15
-| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 | {check}
 
 | {sle} 12
-| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 | {check}
 
