--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -33,12 +33,12 @@ ifeval::[{suma-content} == true]
 | Salt Clients
 
 | {sle} 15
-| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 | {check}
 
 | {sle} 12
-| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 | {check}
 
@@ -163,12 +163,12 @@ ifeval::[{uyuni-content} == true]
 | Salt Clients
 
 | {sle} 15
-| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 | {check}
 
 | {sle} 12
-| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 | {check}
 
