add mu version to ROOT/index.adoc

--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -1,5 +1,12 @@
 = {productname} Documentation
 
+ifeval::[{suma-content} == true]
+**Documentation version**: {mureleaseversion}
+endif::[]
+
+ifeval::[{uyuni-content} == true]
+**Documentation version**: {productnumber}
+endif::[]
 
 == What is {productname}?
 
