--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -17,12 +17,14 @@ endif::[]
 **** xref:payg/creating-an-aws-account.adoc[Creating an AWS account]
 **** xref:payg/selecting-the-payg-plan.adoc[Selecting the PAYG plan]
 **** xref:payg/selecting-and-launching-instances.adoc[Selecting and launching services]
-
-*** xref:payg/payg-and-azure.adoc[PAYG and Azure]
-**** xref:payg/payg-getting-started-with-aws.adoc[Getting started with Azure]
-**** xref:payg/payg-aws-requirements[Azure requirements] 
-**** xref:payg/creating-an-aws-account.adoc[Creating an Azure account]
-
+//*** xref:payg/payg-and-azure.adoc[PAYG and Azure]
+//**** xref:payg/payg-getting-started-with-azure.adoc[Getting started with Azure]
+//**** xref:payg/payg-azure-requirements[Azure requirements] 
+//**** xref:payg/creating-an-azure-account.adoc[Creating an Azure account]
+//*** xref:payg/payg-and-gcp.adoc[PAYG and Google Cloud Compute]
+//**** xref:payg/payg-getting-started-with-gcp.adoc[Getting started with GCP]
+//**** xref:payg/payg-gcp-requirements[GCP requirements] 
+//**** xref:payg/creating-an-gcp-account.adoc[Creating an GCP account]
 ** xref:salt/salt-overview.adoc[Salt Guide]
 *** xref:salt/salt-terminology.adoc[Terminology]
 *** xref:salt/salt-command.adoc[Salt Command]
