--- a/modules/client-configuration/pages/system-groups.adoc
+++ b/modules/client-configuration/pages/system-groups.adoc
@@ -72,6 +72,7 @@ For Salt clients, you can also apply states and formulas to all clients in a gro
 
 In the {productname} {webui}, navigate to menu:Systems[System Groups].
 The list shows an icon if there are updates available for any of the clients in the group.
+The list shows a question mark icon if checking the update status is disabled for any of the clients in the group.
 Click the icon to see more information about the updates available and to apply them to the clients.
 
 You can also work with more than one group at a time.
