Fix DHCP example for cobbler autoinst and add per arch naming

--- a/modules/client-configuration/pages/autoinst-pxeboot.adoc
+++ b/modules/client-configuration/pages/autoinst-pxeboot.adoc
@@ -77,7 +77,7 @@ Alternatively, if your DHCP server is registered at {productname}, you can confi
 .Example: Configuring the ISC DHCP Server Using the DHCPd Formula
 . Navigate to menu:Systems[System List], select the client you want to change, and go to the [guimenu]``Formulas`` tab to enable the DHCPd formula.
 . Go to the formula's [guimenu]``Dhcpd`` tab, and in the [guimenu]``Next Server`` field, enter the hostname or IP address of the installation server.
-. In the [guimenu]``Filename EFI`` field, type [path]``grub/grub.efi`` to enable EFI PXE support.
+. In the [guimenu]``Filename EFI`` field, type [path]``grub/shim.efi`` to enable EFI PXE support.
 . In the [guimenu]``Filename`` field, type [path]``pxelinux.0`` to enable legacy BIOS support.
 . Click btn:[Save Formula] to save your configuration.
 . Apply the highstate.
@@ -85,7 +85,17 @@ Alternatively, if your DHCP server is registered at {productname}, you can confi
 
 [NOTE]
 ====
-If you use Secure Boot, type [path]``grub/shim.efi`` instead of [path]``grub/grub.efi`` in the [guimenu]``Filename EFI`` field.
+If you do not use Secure Boot, type [path]``grub/grubx86.efi`` instead of [path]``grub/shim.efi`` in the [guimenu]``Filename EFI`` field.
+====
+
+[NOTE]
+====
+For different architectures, see table <<grub-efi-arch>>.
+====
+
+[NOTE]
+====
+Using {cobbler} managed DHCP is unsupported with {productname}.
 ====
 
 This sets up a global PXE server for all the hosts, you can also have per-host settings.
@@ -130,3 +140,15 @@ If you want to change the list of proxies later on, you can use the [command]``c
 ====
 If you reinstall an already configured proxy and want to push all the files again, you must remove the cache file at [path]``/var/lib/cobbler/pxe_cache.json`` before you call [command]``cobbler sync``.
 ====
+
+[[grub-efi-arch]]
+== GRUB EFI binary names for different architectures
+
+[cols="1,1", options="header"]
+.GRUB EFI binary names for different architectures
+|===
+| Architecture | GRUB EFI binary name
+| aarch64      | grubaa64.efi
+| x86-64       | grubx86.efi
+| ppc64le      | grub.ppc64le
+|===
