fixes per feedback

--- a/modules/administration/pages/ansible-integration.adoc
+++ b/modules/administration/pages/ansible-integration.adoc
@@ -20,7 +20,7 @@ Supported features are:
 
 For more information:
 
-* The inventory is sorted list of managed Ansible nodes.  For more information about organizing an inventory, see https://docs.ansible.com/ansible/latest/inventory_guide/intro_inventory.html.
+* The inventory is a sorted list of managed Ansible nodes.  For more information about organizing an inventory, see https://docs.ansible.com/ansible/latest/inventory_guide/intro_inventory.html.
 * Playbooks are a way to describe how the inventory is to be managed.  For more information about playbooks, see https://docs.ansible.com/ansible/latest/playbook_guide/playbooks_intro.html.
 
 
