--- a/modules/administration/pages/ansible-setup-control-node.adoc
+++ b/modules/administration/pages/ansible-setup-control-node.adoc
@@ -68,7 +68,7 @@ For executing remediations you need to install the SCAP security guide package o
 == Create Ansible inventory files
 
 Ansible Integration tools deploy a playbook as an inventory file.
-Therefore, you should create one inventory file for each operating system listed in _Table 1_.
+Create one inventory file for each operating system listed in _Table 1_.
 
 .Procedure: Creating the Ansible inventory files
 . Create and add your hosts to an inventory file to be managed by Ansible.
