--- a/modules/reference/pages/systems/system-groups.adoc
+++ b/modules/reference/pages/systems/system-groups.adoc
@@ -30,7 +30,7 @@ Click the icon to see more information about the updates available.
 | Security updates needed
 | One or more clients have security updates that must be installed
 
-| icon:question[role="blue"]
+| icon:question-circle[role="blue"]
 | Status unknown
 | Displaying status of available updates is disabled
 
