--- a/modules/specialized-guides/pages/large-deployments/tuning.adoc
+++ b/modules/specialized-guides/pages/large-deployments/tuning.adoc
@@ -221,6 +221,25 @@ This section contains information about the available parameters.
 
 
 
+[[java-disable_list_update_status]]
+=== `java.disable_list_update_status`
+
+[cols="1,1"]
+|===
+| Description          | Disable displaying the update status for clients of a system group
+| Tune when            | displaying the update status causes timeouts
+| Value default        | `false`
+| Value recommendation | 
+| Location             | [path]``/etc/rhn/rhn.conf``
+| Example              | `java.disable_list_update_status = true`
+| After changing       | ?
+| Notes                |
+| More information     | `man rhn.conf`
+|===
+
+
+
+
 [[java-message-queue-thread-pool-size]]
 === `java.message_queue_thread_pool_size`
 
