update intro and benefits

--- a/modules/specialized-guides/pages/payg/payg-benefits.adoc
+++ b/modules/specialized-guides/pages/payg/payg-benefits.adoc
@@ -1,12 +1,17 @@
-= Overview of benefits for using {payg}
+= Benefits for using {payg}
 
-The SUSE Manager {payg} instance offers a flexible and responsive solution tailored to the modern business landscape. Key benefits include:
+The SUSE Manager {payg} instance offers a flexible solution tailored to the modern business landscape. Key benefits include:
 
 * *Cost Efficiency:* Pay only for what you use, aligning costs with actual system management needs.
+
 * *No Subscription Required:* Eliminate the need for ongoing commitments or long-term subscriptions, allowing for greater budget flexibility.
-* *Ease of Use:* Utilize SUSE Manager's powerful features on a {payg} basis, streamlining the initial setup and ongoing management.
+
+* *Ease of Use:* Utilize SUSE Manager's powerful features on a {payg} or {payglongform} basis, streamlining initial setup and ongoing systems management.
+
 * *Scalability:* Effortlessly scale the number of systems managed according to your requirements, without worrying about subscription limitations.
+
 * *Rapid Deployment:* Quickly run the image of your choice and begin managing your systems, enhancing responsiveness to business needs.
-* *Integration with Cloud Services:* Seamlessly leverage SUSE Manager {payg} on {aws}, Azure, or GCP taking advantage of cloud infrastructure for an agile, efficient system management experience.
+
+* *Integration with Cloud Services:* Seamlessly leverage SUSE Manager {payg} on {aws}, Azure, or GCP taking advantage of cloud infrastructure for an agile systems management experience.
 
 
