--- a/modules/specialized-guides/pages/payg/payg-overview.adoc
+++ b/modules/specialized-guides/pages/payg/payg-overview.adoc
@@ -1,8 +1,6 @@
 = Overview of {payg}
-:description: SUSE Manager {payg} is a flexible and cost-effective solution that allows users to manage their systems with ease. Unlike traditional subscription models, {payg} does not require a long-term commitment. Users can leverage the images of SUSE Manager on a {payg} basis, paying only for the time of use, the number of monitored and managed systems.
+:description: SUSE Manager {payg} or {payglongform} is a flexible and cost-effective solution that allows users to manage and monitor their systems. Unlike traditional subscription models, {payg} does not require a long-term subscription. Users can leverage the images of SUSE Manager on a {payglongform} basis, paying only for the time of use, and the number of managed and monitored systems. {payg} with {productname} is an optimal solution for those seeking control, convenience, and cost savings when managing and monitoring their infrastructure on AWS, Azure, and GCP.
 :keywords: Payg, Pay-as-you-go, AWS, Amazon Web Services, Azure, GCP, Google Cloud Compute,  cost-effective, scaling, Cloud Services, SUSE Manager, Monitoring
 
-SUSE Manager {payg} is a flexible and cost-effective solution that allows users to manage and monitor their systems with ease. Unlike traditional subscription models, {payg} does not require a long-term commitment. Users can leverage the images of SUSE Manager on a {payg} basis, paying only for the time of use, and the number of managed and monitored systems.
-
-With SUSE Manager {payg}, you can quickly run the image of your choice without worrying about ongoing subscriptions. This model provides an agile approach to system management, aligning costs with actual usage, and scaling as your needs change. It's an optimal solution for those seeking control, convenience, and cost savings in managing their systems on AWS, Azure, GCP or other platforms.
+SUSE Manager {payg} or {payglongform} is a flexible and cost-effective solution that allows users to manage and monitor their systems. Unlike traditional subscription models, {payg} does not require a long-term subscription. Users can leverage images of SUSE Manager on a {payglongform} basis, paying only for the time of use, and the number of managed and monitored systems. {payg} with {productname} is an optimal solution for those seeking control, convenience, and cost savings when managing and monitoring their infrastructure on AWS, Azure, and GCP.
 
