--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -7,16 +7,18 @@ include::./branding/pdf/entities.adoc[]
 endif::[]
 
 
-* xref:payg/specialized-guides-overview.adoc[Specialized Guides]
+* xref:specialized-guides-overview.adoc[Specialized Guides]
 
-** xref:payg/payg-overview.adoc[Public Cloud Services Guide]
-*** xref:payg/payg-benefits.adoc[Benefits of PAYG]
-*** xref:payg/payg-and-aws.adoc[PAYG and AWS]
+** {payg} Guide
+*** xref:payg/payg-overview.adoc[{payglongform} or {payg} Introduction]
+*** xref:payg/payg-benefits.adoc[Benefits of {payg}]
+*** xref:payg/payg-and-aws.adoc[{payg} and AWS]
 **** xref:payg/payg-getting-started-with-aws.adoc[Getting started with AWS]
-**** xref:payag/payg-aws-requirements[AWS requirements] 
-**** xref:payg/creating-an-aws-account.adoc[Creating an AWS account]
-**** xref:payg/selecting-the-payg-plan.adoc[Selecting the PAYG plan]
-**** xref:payg/selecting-and-launching-instances.adoc[Selecting and launching services]
+***** xref:payg/creating-an-aws-account.adoc[Creating an AWS account]
+***** xref:payag/payg-aws-requirements[AWS requirements]
+***** xref:payg/payg-find-the-suma-aws-image.adoc[Find the Image]
+***** xref:payg/payg-setup-the-image.adoc[Setup the Image]
+
 //*** xref:payg/payg-and-azure.adoc[PAYG and Azure]
 //**** xref:payg/payg-getting-started-with-azure.adoc[Getting started with Azure]
 //**** xref:payg/payg-azure-requirements[Azure requirements] 
