--- a/modules/specialized-guides/pages/payg/payg-find-the-suma-aws-image.adoc
+++ b/modules/specialized-guides/pages/payg/payg-find-the-suma-aws-image.adoc
@@ -7,8 +7,8 @@ Follow these step-by-step instructions to locate the SUSE Manager {productversio
 * Enter your AWS credentials and login.
 
 . Open the EC2 Dashboard
-* From the AWS Management Console dashboard, locate the “Services” dropdown.
-* Click on "EC2" under the "Compute" section.
+* From the AWS Management Console dashboard, locate the menu:Services[] dropdown.
+* Click on menu:EC2[] under the **Compute** section.
 
 . Access the AWS Marketplace
 * In the EC2 dashboard, on the left sidebar, you'll find the “Launch Instance” button. Click it.
