Ansible playbooks #21977 keichwa (#2407)
* per feedback: contents of playbook directory
* more normalization
* about inventory - xref
* add playbooks info
* info on Ansible playbooks (bsc#1213077)
https://github.com/SUSE/spacewalk/issues/21977

--- a/modules/administration/pages/ansible-setup-control-node.adoc
+++ b/modules/administration/pages/ansible-setup-control-node.adoc
@@ -3,24 +3,23 @@
 
 To setup an Ansible control node, execute the following steps from the {productname} {webui}.
 
-.Procedure: Setup an Ansible control node
+.Procedure: Setting up an Ansible control node
 
-. From the {webui} under menu:Admin[Setup Wizard > Products], verify that [literal]``SUSE Linux Enterprise Server 15 SP5 x86_64`` and [literal]``SUSE Manager Client Tools for SLE 15 x86_64`` are selected and synchronized.
+. In the {productname} {webui}, navigate to menu:Admin[Setup Wizard > Products], verify that [literal]``SUSE Linux Enterprise Server 15 SP5 x86_64`` and [literal]``SUSE Manager Client Tools for SLE 15 x86_64`` are selected and synchronized.
 
 . Deploy a {sles} 15 SP5 client.
 
-. Select the client from the menu:Systems[Overview] page.
-  Select menu:Software[Software Channels] and subscribe the client to the channels [literal]``SUSE Linux Enterprise Server 15 SP5 x86_64`` and [literal]``SUSE Manager Client Tools for {sles} 15 x86_64``.
+. In the {productname} {webui}, navigate to the menu:Systems[Overview] page of the client.
+  Select menu:Software[Software Channels] and subscribe the client to the [literal]``SUSE Linux Enterprise Server 15 SP5 x86_64`` and [literal]``SUSE Manager Client Tools for SLE 15 x86_64`` channels.
 +
 
 [NOTE]
 ====
-The {productname} client tools contain the Ansible package.
+The {productname} client tools contain the [package]``ansible`` package.
 ====
 
-. From the menu:System[Overview] page, select your client.
-
-. Select menu:Details[Properties], and under [literal]``Add-On System Types`` enable [guimenu]``Ansible Control Node`` and click btn:[Update Properties].
+. Select menu:Details[Properties] of your client.
+  From the [literal]``Add-On System Types`` list enable [guimenu]``Ansible Control Node`` and click btn:[Update Properties].
 
 . Navigate to the client overview page, select menu:State[Highstate], and click btn:[Apply Highstate].
 
@@ -33,12 +32,12 @@ The {productname} client tools contain the Ansible package.
 
 For executing remediations you need to install the SCAP security guide package on the Ansible control node.
 
-.Procedure: Install the SCAP security guide package
+.Procedure: Installing the SCAP security guide package
 
 . From menu:Systems[Overview], select the client.
   Then click menu:Software[Packages > Install].
 
-. Search for [literal]``scap-security-guide`` and install the package suitable for your system.
+. Search for [package]``scap-security-guide`` and install the package suitable for your system.
   See the following table for package distribution requirements:
 +
 
@@ -66,10 +65,10 @@ For executing remediations you need to install the SCAP security guide package o
 
 
 [[configure-ansible-inventory-files]]
-== Creating Ansible inventory files
+== Create Ansible inventory files
 
 Ansible Integration tools deploy a playbook as an inventory file.
-Therefore, you should create one inventory file for each distinct OS listed in _Table 1_.
+Create one inventory file for each operating system listed in _Table 1_.
 
 .Procedure: Creating the Ansible inventory files
 . Create and add your hosts to an inventory file to be managed by Ansible.
@@ -81,7 +80,7 @@ Therefore, you should create one inventory file for each distinct OS listed in _
 client240.mgr.example.org
 client241.mgr.example.org
 client242.mgr.example.org
-client243.mgr.example.org  ansible_ssh_private_key_file=/etc/ansible/some_ssh_key
+client243.mgr.example.org ansible_ssh_private_key_file=/etc/ansible/some_ssh_key
 
 [mygroup1]
 client241.mgr.example.org
@@ -96,7 +95,7 @@ ansible_ssh_private_key_file=/etc/ansible/my_ansible_private_key
 
 
 
-. In the {productname} {webui}, from the Ansible control menu navigate to menu:Ansible[Control Node] to add inventory files to the control node.
+. In the {productname} {webui}, from the [guimenu]``Ansible`` tab navigate to menu:Ansible[Control Node] to add inventory files to the control node.
 
 . Under the [literal]``Playbook Directories`` section add [literal]``/usr/share/scap-security-guide/ansible`` to the [literal]``Add a Playbook Directories`` field and click btn:[Save].
 
