Ansible playbooks #21977 keichwa (#2407)
* per feedback: contents of playbook directory
* more normalization
* about inventory - xref
* add playbooks info
* info on Ansible playbooks (bsc#1213077)
https://github.com/SUSE/spacewalk/issues/21977

--- a/modules/administration/pages/ansible-integration.adoc
+++ b/modules/administration/pages/ansible-integration.adoc
@@ -2,9 +2,9 @@
 = Ansible integration
 
 Currently, the supported version of Ansible is 2.9 (LTS) shipped in SUSE Linux Enterprise 15 Client Tools channels.
-The supported OS version for the Ansible Control Node is SLES 15 SP3, or later.
+The supported OS version for the Ansible Control Node is {sles} 15 SP3, or later.
 Ansible software is also available for {productname} Proxy and {productname} {smr} Branch Server.
-For Control Nodes running operating systems other than SUSE Linux Enterprise, use Ansible shipped together with your distribution.
+For Control Nodes running operating systems other than {sle}, use Ansible shipped together with your distribution.
 
 
 
@@ -18,20 +18,27 @@ Supported features are:
 * discovery of playbooks
 * execution of playbooks
 
+For more information:
+
+* The inventory is a sorted list of managed Ansible nodes.  For more information about organizing an inventory, see https://docs.ansible.com/ansible/latest/inventory_guide/intro_inventory.html.
+* Playbooks are a way to describe how the inventory is to be managed.  For more information about playbooks, see https://docs.ansible.com/ansible/latest/playbook_guide/playbooks_intro.html.
+
 
 
 [[at.ansible.requirements]]
-== Requirements
+== Requirements and basic configuration
 
-To use Ansible features, you need to register your Ansible Control Node system as a Salt client to your {productname} Server.
-When registered, you must enable the ``Ansible Control Node`` system type in the [guimenu]``Add-on System Types`` on the menu:System Details[Properties] page of that system.
+To use Ansible features, you need to register the already existing Ansible Control Node as a Salt client to the {productname} Server.
+In the {webui}, on the menu:System Details[Properties] page of the registered system, you must enable the ``Ansible Control Node`` system type of the [guimenu]``Add-on System Types`` list.
 
-Enabling this system type ensures that the ``ansible`` package is installed on the system by adding it in the highstate and activates the Ansible features under the menu:System Details[Ansible] page.
+Enabling the ``Ansible Control Node`` system type ensures that the [package]``ansible`` package is installed on the system by adding it in the highstate and activates the Ansible features under the menu:System Details[Ansible] tab.
 
-As the next step, configure the paths to your Ansible inventories and playbooks on the menu:System Details[Ansible > Control Node] page.
-As an inventory path, you can use the typical ansible inventory path [literal]``/etc/ansible/hosts``.
-As a playbook directory, you can use any directory on the control node, where your playbooks reside.
-A playbook directory either directly contains the [literal]``site.yml`` or contains subdirectories with this file.
+As the next step, configure the paths to your Ansible inventory and playbook files on the menu:System Details[Ansible > Control Node] page.
+As an inventory path, you can use the standard Ansible inventory path [literal]``/etc/ansible/hosts``.
+As a playbook directory, you can use any directory on the control node, where your playbook files are stored.
+A playbook directory either contains [literal]``.yml`` files or subdirectories with [literal]``.yml`` files.
+
+For installing and setting up an Ansible Control Node, see xref:administration:ansible-setup-control-node.adoc[].
 
 
 
