--- a/modules/common-workflows/pages/workflow-sp-upgrade-webui.adoc
+++ b/modules/common-workflows/pages/workflow-sp-upgrade-webui.adoc
@@ -12,7 +12,7 @@ This document describes and illustrates in detail the migration using the {webui
 SP versions used are not reflective of the actual latest versions available.
 They are used for illustration purposes only.
 As an example, the following procedure describes the migration to version 15 SP5 from and older version 15.
-If you are targetting a different version, select the corresponding channels and versions.
+If you are targeting a different version, select the corresponding channels and versions.
 ====
 
 
