--- a/modules/client-configuration/pages/configuration-management.adoc
+++ b/modules/client-configuration/pages/configuration-management.adoc
@@ -192,7 +192,10 @@ You can also use the system set manager (SSM) to compare the configuration file 
 
 == Jinja templating on {salt} Clients
 
-Jinja templating on {salt} Clients is possible on {salt} Clients.
+Jinja templating is possible on {salt} Clients.
+Jinja variables can be used in {salt} pillars or grains in a configuration file of a {salt} state channel.
+
+// create a pillar for each macro
 
 
 
