--- a/modules/specialized-guides/pages/payg/payg-find-the-suma-aws-image.adoc
+++ b/modules/specialized-guides/pages/payg/payg-find-the-suma-aws-image.adoc
@@ -1,44 +1,56 @@
-= Finding the SUSE Manager {productversion} {payg} Image on AWS
+= Finding the SUSE Manager {productnumber} {payg} Image on AWS
 
-Follow these step-by-step instructions to locate the SUSE Manager {productversion} {payg} image on AWS:
+Follow these step-by-step instructions to locate the SUSE Manager {productnumber} {payg} image on AWS:
 
-. Login to AWS Management Console
-* Navigate to link:https://aws.amazon.com/console/[AWS Management Console].
+
+.Procedure: Finding the {productname} {payg} image on AWS
+
+. Login to the AWS **Management Console**:
+
+* In your browser navigate to the link:https://aws.amazon.com/console/[AWS Management Console].
 * Enter your AWS credentials and login.
 
-. Open the EC2 Dashboard
-* From the AWS Management Console dashboard, locate the menu:Services[] dropdown.
-* Click on menu:EC2[] under the **Compute** section.
+. Open the **EC2 Dashboard**:
 
-. Access the AWS Marketplace
+* From the AWS Management Console dashboard, locate the menu:Services[] dropdown.
+* From the menu select menu:EC2[] under the **Compute** section.
+
+. Access the **AWS Marketplace**:
+
 * In the EC2 dashboard, on the left sidebar, you'll find the “Launch Instance” button. Click it.
 * This will lead you to the “Choose an Amazon Machine Image (AMI)” page.
 * Click on the "AWS Marketplace" tab on the left.
 
-. Search for SUSE Manager {productversion} {payg} Image
-* In the search bar, type "SUSE Manager {productversion} {payg}" and press Enter.
+. Search for SUSE Manager {productnumber} {payg} Image:
+
+* In the search bar, type "SUSE Manager {productnumber} {payg}" and press Enter.
 * You should now see a list of available AMIs related to your search.
 
-. Select the Image
-* Locate the correct SUSE Manager {productversion} {payg} image from the results.
+. Select the Image:
+
+* Locate the correct SUSE Manager {productnumber} {payg} image from the results.
 * Click on the "Select" button to the right of the image listing.
 
-. Review and Launch
+. Review and Launch:
+
 * Once you’ve selected the image, you can review the details and pricing information provided.
 * Proceed by clicking the "Continue" or "Review and Launch" button, depending on the next steps you wish to take.
 
-. Additional Configuration (Optional)
+. Additional Configuration (Optional):
+
 * If you wish to configure instance details, storage, tags, or security groups, you can do so in the subsequent steps.
 * Follow the AWS prompts to complete these configurations as needed.
 
-. Launch the Instance
+. Launch the Instance:
+
 * After reviewing and making any necessary configurations, click the “Launch” button.
 * Choose an existing key pair or create a new one to access the instance.
 * Click on the "Launch Instances" button.
 
-. Verify the Launch
+. Verify the Launch:
+
 * You'll be redirected to the EC2 Dashboard.
-* Under “Instances” on the left sidebar, you should see your newly launched SUSE Manager {productversion} {payg} instance running.
+* Under “Instances” on the left sidebar, you should see your newly launched SUSE Manager {productnumber} {payg} instance running.
 
 [NOTE] 
 .Usage and Costs
